add message to swagger
